--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,11 @@
   align-items: center;
   padding: 1rem 1rem;
   margin-bottom: 5rem;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: inherit;
+  backdrop-filter: blur(5px);
 }
 
 .nav-list {
