--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -9,6 +9,7 @@
   margin-top: 2rem;
   display: grid;
   grid-template-rows: repeat(auto-fill, 1fr);
+  gap: 1.5rem;
 }
 
 .experience-container-grid .experience-card {
@@ -44,6 +45,12 @@
 .experience-card .experience-description {
   margin-top: 1rem;
   text-align: justify;
+  white-space: pre-line;
+  line-height: 1.6;
+}
+
+.experience-card .experience-description p {
+  margin-bottom: 0.5rem;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
