--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -49,7 +49,7 @@
   font-size: 1rem;
   line-height: 1.6;
   margin-bottom: 2rem;
-  text-align: justify;
+  text-align: left;
   white-space: pre-line;
 }
 
@@ -70,6 +70,10 @@
 .container-grid .project-card .technology-stack span {
   margin-right: 10px;
   margin-bottom: 10px;
+  padding: 5px 10px;
+  border-radius: 4px;
+  border: 1px solid;
+  display: inline-block;
 }
 
 .container-grid .project-links {
