--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -26,6 +26,31 @@
   transform: translateY(-5px);
 }
 
+.experience-header {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.company-logo {
+  flex-shrink: 0;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.company-logo img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+.experience-details {
+  flex-grow: 1;
+}
+
 .experience-container-grid .job-title-duration-section {
   display: flex;
   flex-direction: row;
@@ -33,10 +58,12 @@
   align-items: center;
   margin-bottom: 0.5rem;
 }
+
 .experience-container-grid .job-title-duration-section .job-title {
   font-size: 1.2rem;
   font-weight: bold;
 }
+
 .experience-container-grid .job-title-duration-section .duration {
   font-size: 1rem;
   font-style: italic;
@@ -54,6 +81,15 @@
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
+  .experience-header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .company-logo {
+    margin-bottom: 15px;
+  }
+
   .experience-container-grid .job-title-duration-section {
     display: flex;
     flex-direction: column;
