--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -40,6 +40,10 @@
 .skills-container-grid .skills-card .skills-stack span {
   margin-right: 10px;
   margin-bottom: 10px;
+  padding: 5px 10px;
+  border-radius: 4px;
+  border: 1px solid;
+  display: inline-block;
 }
 
 /* mobile phones */
